--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -10,10 +10,10 @@
 
     <title>Dashboard Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
-    <link href="asserts/css/bootstrap.min.css" th:href="@{asserts/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="asserts/css/bootstrap.min.css" th:href="@{/asserts/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="asserts/css/dashboard.css" th:href="@{asserts/css/dashboard.css}" rel="stylesheet">
+    <link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
     <style type="text/css">
         /* Chart.js */
 
@@ -89,13 +89,13 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script type="text/javascript" th:src="@{asserts/js/jquery-3.2.1.slim.min.js}"
+<script type="text/javascript" th:src="@{/asserts/js/jquery-3.2.1.slim.min.js}"
         src="asserts/js/jquery-3.2.1.slim.min.js"></script>
-<script type="text/javascript" th:src="@{asserts/js/popper.min.js}" src="asserts/js/popper.min.js"></script>
-<script type="text/javascript" th:src="@{asserts/js/bootstrap.min.js}" src="asserts/js/bootstrap.min.js"></script>
+<script type="text/javascript" th:src="@{/asserts/js/popper.min.js}" src="asserts/js/popper.min.js"></script>
+<script type="text/javascript" th:src="@{/asserts/js/bootstrap.min.js}" src="asserts/js/bootstrap.min.js"></script>
 
 <!-- Icons -->
-<script type="text/javascript" th:src="@{asserts/js/feather.min.js}" src="asserts/js/feather.min.js"></script>
+<script type="text/javascript" th:src="@{/asserts/js/feather.min.js}" src="asserts/js/feather.min.js"></script>
 <script>
     feather.replace()
 </script>
@@ -107,7 +107,7 @@
 </script>
 
 <!-- Graphs -->
-<script type="text/javascript" th:src="@{asserts/js/Chart.min.js}" src="asserts/js/Chart.min.js"></script>
+<script type="text/javascript" th:src="@{/asserts/js/Chart.min.js}" src="asserts/js/Chart.min.js"></script>
 <script>
     var ctx = document.getElementById("myChart");
     var myChart = new Chart(ctx, {
