--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -46,34 +46,29 @@
 <div th:replace="~{emphtml/bar::topbar}"></div>
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="~{emphtml/bar::sidebar(activeUri = 'emps')}"></div>
+        <div th:replace="~{emphtml/bar::sidebar(activeUri = 'orders')}"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <h2><a class="btn btn-sm btn-success" href="/emp" th:href="@{/emp}">增加员工</a></h2>
+            <!--<h2><a class="btn btn-sm btn-success" href="/book" th:href="@{/book}">增加书本</a></h2>-->
+            <h2 class="btn btn-sm btn-success"> 订单表</h2>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr>
-                        <th>#</th>
-                        <th>lastName</th>
-                        <th>email</th>
-                        <th>gender</th>
-                        <th>department</th>
-                        <th>birth</th>
+                        <th>订单号</th>
+                        <th>cost花费</th>
+                        <th>orderdate</th>
                         <th>操作</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="emp:${emps}">
-                        <td th:text="${emp.id}"></td>
-                        <td th:text="${emp.lastName}"></td>
-                        <td th:text="${emp.email}"></td>
-                        <td th:text="${emp.gender}==0?'女':'男'"></td>
-                        <td th:text="${emp.department.departmentName}"></td>
-                        <td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm')}"></td>
+                    <tr th:each="order:${orders}">
+                        <td th:text="${order.id}"></td>
+                        <td th:text="${order.cost}"></td>
+                        <td th:text="${order.orderdate}"></td>
                         <td>
-                            <a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
-                            <button th:attr="del_btn=@{/emp/}+${emp.id}" class="btn btn-sm btn-danger del_btn" th:href="@{/emp/}+${emp.id}">修改</button>
+                            <a class="btn btn-sm btn-primary" th:href="@{/order/}+${order.id}">编辑</a>
+                            <button th:attr="del_btn=@{/order/}+${order.id}" class="btn btn-sm btn-danger del_btn" th:href="@{/order/}+${order.id}">删除</button>
                         </td>
                     </tr>
                     </tbody>
@@ -82,6 +77,9 @@
         </main>
         <form id="deleteBtn" method="post">
             <input type="hidden" name="_method" value="delete"/>
+        </form>
+        <form id="joinBtn" method="post">
+            <input type="hidden" name="_method" value="post"/>
         </form>
     </div>
 </div>
