--- a/src/main/resources/templates/orderdetail/list.html
+++ b/src/main/resources/templates/orderdetail/list.html
@@ -46,51 +46,40 @@
 <div th:replace="~{emphtml/bar::topbar}"></div>
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="~{emphtml/bar::sidebar(activeUri = 'emps')}"></div>
+        <div th:replace="~{emphtml/bar::sidebar(activeUri = 'orderdetails')}"></div>
+
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <!--需要区分是员工修改还是添加；-->
-            <form th:action="@{/emp}" method="post">
-                <!--发送put请求修改员工数据-->
-                <!--
-            1、SpringMVC中配置HiddenHttpMethodFilter;（SpringBoot自动配置好的）
-            2、页面创建一个post表单
-            3、创建一个input项，name="_method";值就是我们指定的请求方式
-            -->
-                <input type="hidden" name="_method" value="put" th:if="${emp!=null}"/>
-                <input type="hidden" name="id" th:if="${emp!=null}" th:value="${emp.id}">
-                <div class="form-group">
-                    <label>LastName</label>
-                    <input name="lastName" type="text" class="form-control" placeholder="zhangsan" th:value="${emp!=null}?${emp.lastName}">
-                </div>
-                <div class="form-group">
-                    <label>Email</label>
-                    <input name="email" type="email" class="form-control" placeholder="zhangsan@atguigu.com" th:value="${emp!=null}?${emp.email}">
-                </div>
-                <div class="form-group">
-                    <label>Gender</label><br/>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="1" th:checked="${emp!=null}?${emp.gender==1}">
-                        <label class="form-check-label">男</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="0" th:checked="${emp!=null}?${emp.gender==0}">
-                        <label class="form-check-label">女</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label>department</label>
-                    <!--提交的是部门的id-->
-                    <select class="form-control" name="department.id">
-                        <option th:selected="${emp!=null}?${dept.id == emp.department.id}" th:value="${dept.id}" th:each="dept:${depts}" th:text="${dept.departmentName}">1</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Birth</label>
-                    <input name="birth" type="text" class="form-control" placeholder="yyyy-MM-dd HH:mm"  th:value="${emp!=null}?${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm')}">
-                </div>
-                <button type="submit" class="btn btn-primary" th:text="${emp!=null}?'修改':'添加'">添加</button>
-            </form>
+            <!--<h2><a class="btn btn-sm btn-success" href="/book" th:href="@{/book}">增加书本</a></h2>-->
+            <h2 class="btn btn-sm btn-success"> 订单详情表</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th>订单号</th>
+                        <th>bookid</th>
+                        <th>num</th>
+                        <!--<th>操作</th>-->
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="orderdetail:${orderdetails}">
+                        <td th:text="${orderdetail.orderid}"></td>
+                        <td th:text="${orderdetail.bookid}"></td>
+                        <td th:text="${orderdetail.num}"></td>
+                        <!--<td>-->
+                            <!--<button th:attr="del_btn=@{/order/}+${order.id}" class="btn btn-sm btn-danger del_btn" th:href="@{/order/}+${order.id}">查看</button>-->
+                        <!--</td>-->
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </main>
+        <form id="deleteBtn" method="post">
+            <input type="hidden" name="_method" value="delete"/>
+        </form>
+        <form id="joinBtn" method="post">
+            <input type="hidden" name="_method" value="post"/>
+        </form>
     </div>
 </div>
 
@@ -106,6 +95,12 @@
 <script type="text/javascript" th:src="@{/asserts/js/feather.min.js}" src="asserts/js/feather.min.js"></script>
 <script>
     feather.replace()
+</script>
+<script type="text/javascript">
+    // $(".del_btn").click(function (){
+    //     $("#deleteBtn").attr("action", $(this).attr("del_btn")).submit();
+    //     return false;
+    // });
 </script>
 
 <!-- Graphs -->
