5. 增加页面点击爱心特效

--- a/src/main/resources/templates/book/add.html
+++ b/src/main/resources/templates/book/add.html
@@ -118,6 +118,8 @@
     });
 </script>
 
+<script type="text/javascript" th:src="@{/asserts/js/SweetHeart.js}" src="asserts/js/SweetHeart.js"></script>
+
 </body>
 
 </html>
