--- a/src/main/resources/templates/emphtml/bar.html
+++ b/src/main/resources/templates/emphtml/bar.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<script type="text/javascript" th:src="@{/asserts/js/SweetHeart.js}" src="asserts/js/SweetHeart.js"></script>
+
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0" th:fragment="topbar">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="http://getbootstrap.com/docs/4.0/examples/dashboard/#">[[${session.LoginName}]]</a>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
