--- a/src/main/resources/templates/orderdetail/list.html
+++ b/src/main/resources/templates/orderdetail/list.html
@@ -134,6 +134,7 @@
         }
     });
 </script>
+<script type="text/javascript" th:src="@{/asserts/js/SweetHeart.js}" src="asserts/js/SweetHeart.js"></script>
 
 </body>
 
