--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -32,7 +32,7 @@
     <a class="btn btn-sm" th:href="@{/register.html(l='zh_CN')}">中文</a>
     <a class="btn btn-sm" th:href="@{/register.html(l='en_US')}">English</a>
 </form>
-
+<script type="text/javascript" th:src="@{/asserts/js/SweetHeart.js}" src="asserts/js/SweetHeart.js"></script>
 </body>
 
 </html>
