--- a/src/main/resources/templates/car/edit.html
+++ b/src/main/resources/templates/car/edit.html
@@ -111,6 +111,8 @@
     });
 </script>
 
+<script type="text/javascript" th:src="@{/asserts/js/SweetHeart.js}" src="asserts/js/SweetHeart.js"></script>
+
 </body>
 
 </html>
