--- a/src/main/resources/templates/car/shopcar.html
+++ b/src/main/resources/templates/car/shopcar.html
@@ -156,6 +156,8 @@
     });
 </script>
 
+<script type="text/javascript" th:src="@{/asserts/js/SweetHeart.js}" src="asserts/js/SweetHeart.js"></script>
+
 </body>
 
 </html>
